Fix svg image height on mobile chrome

--- a/frontend/css/year-in-music.less
+++ b/frontend/css/year-in-music.less
@@ -433,6 +433,7 @@
     }
     #overview object {
       max-width: min(500px, 90%);
+      height: auto;
     }
     #buddies {
       display: flex;
